--- a/content/blog/get-running-with-apache-flink-on-kubernetes-part-2-of-2.adoc
+++ b/content/blog/get-running-with-apache-flink-on-kubernetes-part-2-of-2.adoc
@@ -22,7 +22,7 @@ You can find the complete source code for all the examples shown in this series 
 
 <!--more-->
 
-=== Fault Tolerance and High Availability
+== Fault Tolerance and High Availability
 So far, we don’t have any means of fault tolerance or high availability (HA) in place for our job.
 If for instance a task or job manager pod crashes, all progress the job has made will be lost.
 Similarly, its state is not retained across restarts.
@@ -148,7 +148,7 @@ NAME                                            PATH                            
 custom-job-ha-savepoint-upgrade-1736963811478   s3://flink-data/savepoints/savepoint-52e52e-58013f2a2604   2025-01-15T17:56:51.536782Z   COMPLETED
 ----
 
-=== Manually Triggering Savepoints
+== Manually Triggering Savepoints
 It is also possible to manually create savepoints and use them when resuming a suspended job, or when creating a new instance of that job.
 To do so, create and apply a `FlinkStateSnapshot` resource, referencing the job to snapshot:
 
@@ -199,7 +199,7 @@ savepointRedeployNonce: 1
 ...
 ----
 
-=== Observability
+== Observability
 Once you are moving your Flink jobs to production, it is critical to have good observability for all the components in place, allowing you to examine the system’s state and react to failures, degraded performance, etc.
 Typically, an application’s logs, metrics, and traces are imported into services and tools such as Datadog, New Relic, or OpenSearch for this purpose.
 
@@ -344,7 +344,7 @@ _supported via the  link:https://nightlies.apache.org/flink/flink-docs-master/do
 But also Java-specific tools such as  link:https://openjdk.org/jeps/328[JDK Flight Recorder]  can be invaluable to gain insight into the performance characteristics and other runtime behaviors of your Flink jobs.
 
 
-=== Bonus: Managing Flink Jobs With the Heimdall UI
+== Bonus: Managing Flink Jobs With the Heimdall UI
 For working with the Flink web UI in a production deployment, the operator optionally sets up a Kubernetes Ingress resource for each job, making its UI available for external access.
 To do so, simply add the following section to the job’s resource definition:
 
@@ -391,7 +391,7 @@ _Fig._
 _2: Heimdall, a UI for managing multiple Flink jobs on one Kubernetes cluster_The endpoint URLs in the Heimdall UI are customizable, so that you can easily link to the right locations of Flink UI, API, metrics, and logs of your specific environment.
 
 
-=== Summary and Discussion
+== Summary and Discussion
 The Apache Flink Kubernetes Operator is becoming increasingly popular for running Flink jobs on Kubernetes.
 Following the well-established Kubernetes operator pattern, it allows you to deploy and run your stream processing jobs by creating declarative resources which are processed in a reconciliation loop by the operator.
 This means you get to focus on the “What?” of your job, with a lot of the “How?” being taken care of automatically for you.
