--- a/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
+++ b/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
@@ -20,7 +20,7 @@ In this blog post, I’ll show you how to use the Apache Flink web UI to monitor
 
 <!--more-->
 
-=== The Apache Flink UI
+== The Apache Flink UI
 Introduced earlier this year,  link:https://docs.decodable.co/docs/create-pipelines-using-your-own-apache-flink-jobs[Decodable Custom Pipelines]  (currently in Tech Preview) complement SQL-based pipelines by bringing you the full flexibility of the Flink APIs for implementing your stream processing use cases.
 This comes in handy for situations where SQL isn’t expressive enough, where you’d like to use a connector which isn’t available out-of-the-box in Decodable currently, or where you’d just like to migrate some existing Flink jobs to a managed execution environment, sparing you from operating your own Flink clusters.
 
@@ -40,7 +40,7 @@ Adding support for the Apache Flink web UI moves Custom Pipelines to the next le
 We can’t wait for you to give this a try and let us know about any feedback you may have!
 
 
-=== Stream Metadata in the Custom Pipeline SDK
+== Stream Metadata in the Custom Pipeline SDK
 When adding support for deploying custom Flink jobs, one of the design goals was to provide a tight integration with the rest of the Decodable platform, such as SQL-based pipelines and fully-managed connectors.
 To that end, the open-source  link:https://github.com/decodableco/decodable-pipeline-sdk[Decodable SDK for Custom Pipelines]  provides utilities like  link:https://decodableco.github.io/decodable-pipeline-sdk/api-docs/current/co/decodable/sdk/pipeline/DecodableStreamSource.html[DecodableStreamSource]  and  link:https://decodableco.github.io/decodable-pipeline-sdk/api-docs/current/co/decodable/sdk/pipeline/DecodableStreamSink.html[DecodableStreamSink] , which allow you to consume data from and produce data to Decodable managed streams.
 
@@ -59,7 +59,7 @@ At this point, the *SourceStreams* and *SinkStreams* annotations can be used for
 In a future version of the SDK, this metadata will be extracted from the stream topology and propagated automatically to the backend, further simplifying the user experience.
 
 
-=== Next Steps
+== Next Steps
 If you haven’t done so yet, you can request access to the Custom Pipelines Tech Preview from the Decodable Web UI.
 Simply choose “Request Custom Pipelines Access” from the drop-down when creating a pipeline, which will initiate the process for bootstrapping all the required resources and making it available to you shortly thereafter.
 
