--- a/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.adoc
+++ b/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.adoc
@@ -21,7 +21,7 @@ In this blog post I’d like to discuss why we’ve built Custom Pipelines and t
 
 <!--more-->
 
-==== Decodable Custom Pipelines
+=== Decodable Custom Pipelines
 link:https://www.decodable.co/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable[Custom Pipelines] , written in any JVM language such as Java or Scala, complement Decodable’s support for SQL-based data streaming pipelines.
 While SQL is a great choice for a large share of data streaming use cases, allowing you to map and project, filter and join, group and aggregate your data, in some cases it might not be flexible enough.
 
@@ -34,7 +34,7 @@ When running your own Flink jobs, it should be possible to benefit from Decodabl
 This is where the new  link:https://github.com/decodableco/decodable-pipeline-sdk/[Custom Pipelines SDK]  comes in, providing you with all the right integration points needed.
 
 
-==== Getting Started With the Custom Pipelines SDK
+=== Getting Started With the Custom Pipelines SDK
 The simplest way for getting started with building your Flink jobs for the Decodable platform is to use the  link:https://nightlies.apache.org/flink/flink-docs-release-1.16/docs/dev/configuration/overview/[quickstart archetype]  provided by Apache Flink.
 Run the following to start a new Maven project:
 
@@ -87,7 +87,7 @@ Another managed Decodable connector could take the data from that stream and sen
 To learn more about the Decodable SDK for Custom Pipelines, see the  link:https://decodableco.github.io/decodable-pipeline-sdk/api-docs/current/co/decodable/sdk/pipeline/package-summary.html[API documentation]  for the project.
 
 
-==== Testing
+=== Testing
 Good testability is a key requirement during modern application development.
 To that end, the SDK comes with a complete testing framework, letting you validate the logic of your stream processing job in end-to-end tests.
 The testing framework uses the  link:https://testcontainers.com/[Testcontainers]  project for spinning up the underlying infrastructure.
@@ -108,7 +108,7 @@ Finally, one record is retrieved from the “purchase-orders-processed” stream
 This testing framework allows you to implement comprehensive tests, in your own IDE or CI environment, so that you can verify that your jobs work as expected before deploying them to production.
 
 
-==== Deploying your Custom Pipelines
+=== Deploying your Custom Pipelines
 After implementing and testing your stream processing job, you can now deploy it as a pipeline to Decodable.
 Make sure you have the Custom Pipelines feature enabled in the Decodable UI:
 
@@ -145,7 +145,7 @@ image::/images/2023/07/6717dc3482a396e17c57a78e_665de628e01a0041a62ed277_FmrnJJN
 After waiting a few moments, your job is running and processing purchase orders from the input stream and sending them to the output stream.
 
 
-==== Next Steps
+=== Next Steps
 Today’s Beta1 release marks the first step towards a fully supported and feature-rich SDK for Decodable Custom Pipelines.
 This is a perfect time for you to join the  link:https://decodablecommunity.slack.com/ssb/redirect#/shared-invite/email[Decodable user community] , sign up for Custom Pipelines, and give it a try.
 
