--- a/content/blog/meet-the-decodable-crew-at-kafka-summit-london-2024.adoc
+++ b/content/blog/meet-the-decodable-crew-at-kafka-summit-london-2024.adoc
@@ -23,7 +23,7 @@ We’d love to see you next week!
 
 <!--more-->
 
-=== Talks
+== Talks
 The key part to every conference are breakout sessions and lightning talks, and we’re excited to be present at Kafka Summit London with the following sessions this year:
 
 * Robin Moffatt:  link:https://events.bizzabo.com/559905/agenda/session/1284897%20/[🐲 Here be Stacktraces — Flink SQL for Non-Java Developers]  / Tue Mar 19 3:30 PM
@@ -34,7 +34,7 @@ In addition, Robin and myself will be room hosts on Wednesday.
 So if you want to see us MC-ing some other excellent talks, drop by in Breakout Room 2.
 
 
-=== The Decodable Booth
+== The Decodable Booth
 The booth (#106, very centrally located in the expo area) will be where you can meet the Decodable team during the two conference days.
 We’ll do *live demos* of the product and show how easy realtime data movement and processing can be in this time and age.
 Bring all your technical (and other) *questions*, we’ll have several folks from the engineering, product, and sales teams.
@@ -43,12 +43,12 @@ If you’d like to book a meeting in advance, please fill out  link:https://www.
 Needless to say there’ll also be some *amazing swag* (rumor has it, our legendary acorns will be back), a *raffle*, and then some.
 
 
-=== Bring Your Running Shoes 👟
+== Bring Your Running Shoes 👟
 On Tuesday morning there’ll be an unofficial Kafka Summit 5k run (or walk, if you prefer) starting from near the ExCeL center.
 Details are TBC - see  link:https://rmoff.net/2022/04/05/the-unofficial-kafka-summit-london-2022-run/walk/[this blog post]  for an idea of how it’s worked in past years, and stay tuned to  link:https://twitter.com/rmoff/[Robin’s Twitter feed]  for details of where & when to meet next Tuesday.
 
 
-=== Meet-up
+== Meet-up
 Together with the amazing folks from  link:https://aiven.io/[Aiven] , we’re  link:https://www.meetup.com/uk-open-source-data-infrastructure-meetup/events/299077949/[co-hosting a meet-up]  after the event, on Wednesday March 20, 6:00 PM.
 There will be lightning talks (up to ten minutes) and some light bites (no pun intended).
 Make sure to register on the meet-up page to secure your spot.
@@ -56,7 +56,7 @@ Everyone attending is invited to propose their own data-related talk, so if you 
 And if you’d rather just attend for the vibe and listen to the talks, that’s cool too.
 
 
-=== Product News
+== Product News
 Last but not least, there’ll be some really exciting Decodable product news which we are planning to announce in the course of the next few weeks!
 Without giving away too much just yet, I think it’s safe to say that realtime data movement and processing, based on proven open-source technologies such as Debezium and Apache Flink, has never been easier.
 Decodable is here to help you with propagating your data in the right shape and form to the right locations and systems, in real time, with as little or much processing as needed.
