--- a/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.adoc
+++ b/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.adoc
@@ -42,7 +42,7 @@ So this will have to wait for another time.
 The Postgres community took care of this super fast: a bug fix has already been applied, so that column lists should work as expected in the next Postgres release.
 
 
-=== Using Logical Decoding Row Filters With Debezium
+== Using Logical Decoding Row Filters With Debezium
 To follow along, check out the  link:https://github.com/gunnarmorling/postgres-publication-filtering[postgres-publication-filtering]  demo project from GitHub.
 It contains a Docker Compose file for running Postgres as well as Apache Kafka and Kafka Connect with Debezium::
 
@@ -134,7 +134,7 @@ Alternatively, use curl to post the configuration directly to Kafka Connect’s 
 
 ----
 
-=== Observing Filtered Change Events
+== Observing Filtered Change Events
 Return to your Postgres session and display the contents of the products table:
 
 
@@ -213,7 +213,7 @@ As they say, a picture is worth a thousand words (and I’d never pass on an opp
 
 image::/images/2022/12/6717dc0682a396e17c578f44_665de628e01a0041a62ed257_qOFZTHdBrDH60LB2osltR5E9C1BmYkh658McBIypNXPCexH3J_rDouuhPwW3gi7Bo_Sp9rh9iFjTF-WoCHv11viV0py3yubpU6hpe6Bp4pe-d7VFqtfdEliaRsAWUrRnMGa9MxS7Yd0jZmY2fIdRj70uAEGKGeVOM1heH4X-QeaOhuN6_hvHSAD5aTkIMA.webp[]
 
-=== Wrap-Up
+== Wrap-Up
 Row filters (and column lists) are a great addition to the Postgres logical decoding toolbox.
 Having fine-grained control over which change events should be published and which field they should contain, opens up many interesting opportunities from a perspective of efficiency and data privacy as well as the ability to set up content specific change data streams, as demonstrated in the example above.
 
