--- a/content/blog/seven-must-see-talks-at-current-2024.adoc
+++ b/content/blog/seven-must-see-talks-at-current-2024.adoc
@@ -28,7 +28,7 @@ If so, let’s meet and chat on real-time data streaming, stream processing, and
 If you don’t find me at the Decodable booth, you can catch me at my talk (details below), in Breakout Room 6 where I’m going to be a room host on Wednesday morning, or roaming the conference halls in between.
 
 
-=== Atomic Dual-write Recipes with Kafka Two Phase Commit (KIP-939)
+== Atomic Dual-write Recipes with Kafka Two Phase Commit (KIP-939)
 Wed Sep 18, 4:00 PM - 4:45 PM
 
 It’s a common requirement for applications to update state within their own (typically relational) database while also sending a message to Kafka, for instance to notify other services about that data change.
@@ -37,14 +37,14 @@ KIP-939 is promising to change this, enabling Kafka to participate in distribute
 This is gonna be a game changer for Kafka, and I can’t wait to learn more about the details in this session by Confluent’s Artem Livshits.
 
 
-=== Streaming Queries Without Compromise
+== Streaming Queries Without Compromise
 Wed Sep 18, 4:00 PM - 4:45 PM
 
 One of the most exciting data research papers last year was  link:https://www.vldb.org/pvldb/vol16/p1601-budiu.pdf[DBSP: Automatic Incremental View Maintenance for Rich Query Languages] , providing a fresh look at the problem of efficient incremental view maintenance (IVM) and winning the best research paper award at the 2023 conference of Very Large Databases (VLDB).
 This session by Mihai Budiu and Leonid Ryzhyk of Feldera discusses the core ideas behind DBSP and should be an absolute must watch for everyone interested in IVM.
 
 
-=== Optimizing Apache Kafka with GraalVM: Faster, Leaner, and Performant
+== Optimizing Apache Kafka with GraalVM: Faster, Leaner, and Performant
 Wed Sep 18, 3:00 PM - 3:45 PM
 
 Who doesn’t love their Kafka brokers to start faster and consume less memory?
@@ -54,7 +54,7 @@ So great for integration testing, for instance!
 Join Krishna Agarwal and Vedarth Sharma of Confluent to learn all about this cool feature.
 
 
-=== Flinking Enrichment: Shouldn't This Be Easier?
+== Flinking Enrichment: Shouldn't This Be Easier?
 Wed Sep 18, 2:00 PM - 2:45 PM
 
 Enriching events on a Kafka topic with contextual data is one very common use case for stream processing with Apache Kafka.
@@ -63,7 +63,7 @@ What are the pros and cons of the different approaches, when to use which one, w
 David Anderson of Confluent is going to answer all these questions, and surely more, in this talk which I think will be a great watch for all you Flink practitioners out there.
 
 
-=== Sentiment Analysis in Action with Apache Flink: Building Your Real-time Pipeline
+== Sentiment Analysis in Action with Apache Flink: Building Your Real-time Pipeline
 Tue Sep 17, 3:00 PM - 3:45 PM
 
 Are we at peak AI yet?
@@ -72,7 +72,7 @@ If you’re curious about how to build your own real-time API data pipeline usin
 
 
 
-=== Decodable at Current
+== Decodable at Current
 
 Current will also be a great opportunity for you to meet with the Decodable crew.
 We’re a Gold sponsor for the event and you can look forward to the following talks by the team (in chronological order):
@@ -90,7 +90,7 @@ And I’ve heard there’s gonna be some really cool swag too.
 
 
 
-=== Change Data Capture & Kafka: How Slack Transitioned to CDC with Debezium & Kafka Connect
+== Change Data Capture & Kafka: How Slack Transitioned to CDC with Debezium & Kafka Connect
 Wed Sep 18, 4:00 PM - 4:45 PM
 
 “The CDC pipeline slashed cost by millions and slashed latency from 24 hours to less than 10 minutes.” Do you need any more reasons for adopting Debezium and CDC?
@@ -98,7 +98,7 @@ Having worked on Debezium for several years, I am always loving to learn about s
 Really looking forward to this session by Slack engineers Joseph Thaidigsman and Tom Thornton.
 
 
-=== Addressing Streaming ETL Pipelines Challenges: Delving into Flink CDC
+== Addressing Streaming ETL Pipelines Challenges: Delving into Flink CDC
 Wed Sep 18, 5:00 PM - 5:45 PM
 
 Flink CDC has made a mature leap forward with its version 3.0, evolving into a complete end-to-end solution for data pipelines, providing powerful solutions for (re-)snapshotting specific tables, handling schema changes, and more.
@@ -106,7 +106,7 @@ I haven’t seen an awful lot of information around it, besides the initial anno
 I might have some questions about that usage of YAML, though ;)
 
 
-=== Enabling Flink's Cloud-Native Future: Introducing Disaggregated State in Flink 2.0
+== Enabling Flink's Cloud-Native Future: Introducing Disaggregated State in Flink 2.0
 Tue Sep 17, 5:00 PM - 5:45 PM
 
 Relying on node-local state for checkpoints and savepoints isn’t ideal when running Apache Flink in cloud environments, for instance when considering containerized Flink workloads which may be moved around compute nodes.
@@ -114,7 +114,7 @@ The Flink community is currently in the process of addressing these challenges w
 Yuan Mei of Alibaba is going to provide an overview of this work in this session, which should be highly relevant to everyone running Flink in the cloud, on Kubernetes, etc.
 
 
-=== Community Events
+== Community Events
 Besides the large number of regular break-out sessions, there will also be a variety of community events.
 I am looking forward to the  link:https://events.bizzabo.com/599116/agenda/session/1422354[Apache Flink® Ask Me Anything]  session at the Meetup Hub, with folks from Confluent, LinkedIn, and Apple being ready to answer all your questions on the popular stream processing platform.
 There’ll be the announcement of the  link:https://events.bizzabo.com/599116/agenda/session/1422363[Data Streaming Awards] , an  link:https://rmoff.net/2024/09/02/current-2024-5k-fun-run-or-walk/[unofficial 5K run/walk]  un-organized by my fellow Decoder Robin Moffatt, and much more.
