--- a/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
+++ b/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
@@ -24,7 +24,7 @@ This new capability complements and tightly integrates with Decodable’s existi
 In the remainder of this blog post, I would like to discuss the philosophy behind this new feature, how it integrates with the Decodable managed service experience, and how you can start and give it a try yourself.
 
 
-=== Why Custom Apache Flink Jobs?
+== Why Custom Apache Flink Jobs?
 SQL is the industry standard for declarative data processing.
 It is widely supported not only to query _data at rest_ in OLTP and OLAP systems, but it also is a popular choice to run queries against _data in motion_ in real-time stream processing platforms like  link:https://flink.apache.org/[Apache Flink] .
 There are even  link:https://arxiv.org/pdf/1905.12133.pdf[proposals]  for integrating streaming semantics into the official SQL standard.
@@ -44,7 +44,7 @@ Existing Flink workloads, e.g., running on a self-managed cluster, can easily be
 With support for custom Flink-based pipelines, the Decodable platform is becoming _the_ one-stop shop for all your stream processing needs.
 
 
-=== Integration Into the Decodable Platform
+== Integration Into the Decodable Platform
 Now, we didn’t want to build just some platform for deploying Flink jobs, but we wanted to do it the _Decodable Way_.
 No matter whether you are running SQL-based pipelines or custom Flink jobs, you should be able to benefit from all the platform features you’ve come to love, including fully-managed connectors for a wide range of external data sources and sinks, observability and monitoring, role-based access control (RBAC), and much more.
 
@@ -78,7 +78,7 @@ Just as it’s the case for SQL-based pipelines, we’ve taken measures to make 
 Workloads are run in isolated security contexts and no code or data access is possible across account boundaries.
 
 
-=== Trying It Out Yourself
+== Trying It Out Yourself
 We are releasing custom pipelines in Decodable, based on bespoke Apache Flink jobs, as a Tech Preview today.
 This means that this is the perfect time for you to get your hands onto this new feature and provide your feedback to us.
 
