--- a/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
+++ b/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
@@ -20,7 +20,7 @@ This is because it enables the tight integration of transactional databases into
 
 <!--more-->
 
-=== What is CDC?
+== What is CDC?
 CDC responds to changes–such as inserts, updates, and deletions–as they are made in a transactional database and sends those changes in real time to another system for ingesting and processing.
 While there are multiple possible ways for implementing a CDC solution, the most powerful approach is log-based CDC, which retrieves change events from the transaction log of a database.
 
@@ -34,7 +34,7 @@ Compared to other styles of CDC, such as periodic polling for changed records, l
 * no impact on your source data model
 
 
-=== CDC Tools
+== CDC Tools
 There are a number of commercial and open-source software (OSS) CDC tools, but the most widely used OSS CDC platform is  link:https://debezium.io/[Debezium] , which provides  link:https://debezium.io/documentation/reference/stable/connectors/index.html[connectors for many popular databases]  such as MySQL, Postgres, SQL Server, Oracle, Cassandra, Google Cloud Spanner, and others.
 Several database vendors have implemented their own CDC connectors based on Debezium, for instance  link:https://docs.yugabyte.com/preview/explore/change-data-capture/debezium-connector-yugabytedb/[Yugabyte]  and  link:https://opensource.docs.scylladb.com/stable/using-scylla/integrations/scylla-cdc-source-connector.html[ScyllaDB] .
 
@@ -46,7 +46,7 @@ CDC platforms, like Debezium, are frequently used alongside popular data enginee
 In this article, I’ll present an overview of seven common use cases for change data capture—Let’s go!
 
 
-=== Analytics Data Platforms
+== Analytics Data Platforms
 One of the most widely adopted uses for CDC is getting data from transactional databases into systems that more efficiently support analytical processing.
 Whereas transactional database systems such as MySQL or Postgres are optimized for efficiently processing transactions on comparatively small numbers of records,  link:https://en.wikipedia.org/wiki/Online_analytical_processing[OLAP]  systems are designed to handle queries that read potentially millions of rows of data.
 CDC provides a way to keep OLAP data stores up to date with the freshest data possible from OLTP systems, with end-to-end latencies in the range of mere seconds.
@@ -58,7 +58,7 @@ Apache Pinot, Apache Druid or Clickhouse) allows you to implement use cases like
 For use cases involving frequent updates to existing records, such as mutable data, stores optimized for upsert semantics (e.g.,  link:https://docs.pinot.apache.org/basics/data-import/upsert[Pinot]  or  link:https://rockset.com/docs/cdc/[Rockset] ) often offer tailored support for the Debezium event format.
 
 
-=== Application Caches
+== Application Caches
 A common pattern used for improving application performance is the introduction of a local cache of read-only data.
 One of the main challenges with this is keeping the cache fresh and ensuring that the application does not read stale data.
 CDC can be an excellent fit here.
@@ -76,7 +76,7 @@ For instance, Apache Flink could be used to join the change event streams from t
 That way, data can be retrieved from the cache very efficiently, without performing any costly read-time joins.
 
 
-=== Full-Text Search
+== Full-Text Search
 Similar to the way in which transactional database systems are not well suited to directly supporting analytical workloads, full-text search also benefits greatly from data stores that are specifically designed for that purpose, such as Elasticsearch or OpenSearch.
 Leveraging search-specific functionality such as stemming, normalization, stop words, synonyms, and abbreviations ensures rapid delivery of the most relevant results for broad or even “fuzzy” searches.
 
@@ -88,7 +88,7 @@ I recently published an episode of “Data Streaming Quick Tips”,  exploring 
 If you prefer a text-based version, you can find a transcript of this video  link:https://www.decodable.co/blog/array-aggregation-with-flink-sql-data-streaming[here] .
 
 
-=== Audit Logs
+== Audit Logs
 In enterprise applications, retaining an audit log of your data is a common requirement, keeping track of when and how data records changed.
 CDC offers an effective solution since extracting data changes from a database transaction log provides that information: A change event stream, with events for all the inserts, updates, and deletes executed for a table could be considered a simple form of an audit log.
 
@@ -109,7 +109,7 @@ Within the same Flink job, you now could add a sink connector and for instance w
 Alternatively, depending on your business requirements, the enriched change events could also be written as an audit log to an object store such as S3, or a queryable analytics data store.
 
 
-=== Continuous Queries
+== Continuous Queries
 Not all queries need to be served from static stores like Pinot or  link:https://www.snowflake.com[Snowflake] .
 Apache Flink provides dynamic tables, which is one that is  link:https://flink.apache.org/2017/03/30/continuous-queries-on-dynamic-tables/#continuous-queries-on-dynamic-tables[“continuously updated and can be queried like a regular, static table”] .
 However, in contrast to a static table query, a query on a dynamic table runs continuously and produces a table that is continuously updated based on changes to the input table, with results stored in a new dynamic table.
@@ -123,7 +123,7 @@ This allows you to create a data pipeline that ingests CDC data into Flink, crea
 For instance, you may consider pushing any updates directly to a dashboard in connected web browsers using technologies such as server-sent events or Web Sockets, completely avoiding the need for any intermediary query layer.
 
 
-=== Microservices Data Exchange
+== Microservices Data Exchange
 As part of their business logic, microservices often not only have to update their own local data store, but also need to notify other services about data changes that have happened.
 The  link:https://debezium.io/blog/2019/02/19/reliable-microservices-data-exchange-with-the-outbox-pattern/[outbox pattern] —which is implemented using CDC—is an approach for letting services execute these two tasks in a safe and consistent manner, avoiding the pitfalls of unsafe dual writes.
 
@@ -137,7 +137,7 @@ If you are on Postgres, then you don’t even need to have a bespoke outbox tabl
 With the  link:https://www.infoq.com/articles/wonders-of-postgres-logical-decoding-messages/[help of logical decoding messages] , you can insert your outbox events exclusively to the transaction log, from where they can be retrieved and propagated with CDC tools such as Debezium.
 
 
-=== Monolith-to-Microservices Migration
+== Monolith-to-Microservices Migration
 Oftentimes, you don’t start building applications from scratch, but there is an existing application landscape which needs to be evolved and expanded.
 In this context, it may be necessary to migrate from an existing monolithic architecture to a set of loosely coupled microservices, splitting up the existing monolith.
 In order to avoid the risks of a big bang migration, it is recommended to take a gradual approach, extracting one service at a time.
@@ -150,7 +150,7 @@ You can then use CDC to propagate data changes from the monolith to the service 
 I discussed the strangler pattern with CDC in a  link:https://speakerdeck.com/hpgrahsl/dissecting-our-legacy-the-strangler-fig-pattern-with-apache-kafka-debezium-and-mongodb-at-mongodb-dot-live-2021[joint talk with Hans-Peter Grahsl] , where we also explored advanced aspects such as avoiding infinite replication loops when doing bi-directional CDC or using stream processing for establishing an anti-corruption layer between legacy data models and newly created microservices.
 
 
-=== Summary
+== Summary
 And that’s it—seven use cases for CDC.
 It is a powerful enabler for your data, allowing you to react to any data changes in real time.
 I have worked with CDC for several years now, and I’m still surprised to learn about new use cases regularly.
