--- a/content/blog/checkpoint-chronicle-april-2024.adoc
+++ b/content/blog/checkpoint-chronicle-april-2024.adoc
@@ -21,13 +21,13 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 <!--more-->
 
-=== Stream Processing, Streaming SQL, and Streaming Databases
+== Stream Processing, Streaming SQL, and Streaming Databases
 * In  link:https://blogit.michelin.io/dkafka-streams/[Designing Kafka Streams Applications] , Valérie Servaire, Paul Amar, Damien Fayet, and Sébastien Viale take us through their process of designing Kafka Streams topologies at Michelin.
 * Robin continues his quest of learning everything about Flink SQL; in his latest post, aptly named  link:https://www.decodable.co/blog/flink-sql-misconfiguration-misunderstanding-and-mishaps[Flink SQL—Misconfiguration, Misunderstanding, and Mishaps] , he explores commonly encountered failures when starting with Flink SQL, such as version mismatches, incomplete classpaths, bad catalog configurations, and more.
 * On the heels of the Big Three cloud providers, Cloudflare are continuously building out their portfolio of managed services, including object storage, serverless workers, and more. Amongst the latest additions, there are services for  link:https://blog.cloudflare.com/data-anywhere-events-pipelines-durable-execution-workflows[durable execution and stream processing] , with a Beta release planned for later this year. The post provides a preview of how future API may look like.
 
 
-=== Event Streaming
+== Event Streaming
 * Loving, loving, loving the post  link:https://towardsdatascience.com/real-time-twitch-chat-sentiment-analysis-with-apache-flink-e165ac1a8dcf[Real-Time Twitch Chat Sentiment Analysis with Apache Flink]  by Volker Janz: it describes how to implement a streaming pipeline for sentiment analysis from the ground up, implementing a custom source function to ingest Twitch chat messages into Flink and using the  link:https://stanfordnlp.github.io/CoreNLP/[Stanford CoreNLP library]  for processing the same. Excellent write-up!
 * “Debezium and Kafka are a solid tandem for replication needs.” I always enjoy reading posts where data engineers describe the problems they’ve encountered and how they’ve overcome them, as there is so much to learn from them. In  link:https://www.revenuecat.com/blog/engineering/data-ingestion-snowflake/[How we solved RevenueCat’s biggest challenges on data ingestion into Snowflake] , Jesús Sánchez provides a deep insight into their data ingestion pipeline and explains why the team decided to build it that way.
 * Head-of-line blocking is a well-known issue most Kafka users will encounter sooner or later (here’s a  link:https://twitter.com/gunnarmorling/status/1541809606384652295[Twitter thread]  I did a while ago on this topic). One way for dealing with this problem is to use parallel Kafka consumers, as nicely illustrated in  link:https://blogs.halodoc.io/maximizing-kafka-efficiency-exploring-parallel-consumers/[this post]  by the engineering team of Halodoc.
@@ -38,12 +38,12 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * Apache Iceberg is becoming more and more popular as an open table format for data lakes. In  link:https://www.infoq.com/presentations/apache-iceberg-streaming/[this session]  (transcript included), Steven Wu of Apple shares his learnings from building a streaming pipeline from Iceberg, using Apache Flink.
 
 
-=== Change Data Capture
+== Change Data Capture
 * Looking for a hands-on example for integrating CDC with Debezium into a stream processing pipeline based on Apache Spark? Then check out  link:https://towardsdev.com/change-data-capture-cdc-with-docker-apache-kafka-debezium-and-apache-spark-streaming-0922fa901c21[this tutorial]  by Abdelbarre Chafik, running you step by step through setting up a CDC-driven data pipeline, using Docker, Apache Kafka, Debezium, and Apache Spark Streaming.
 * Taking data from OLTP to OLAP is one of the data engineering evergreens. In his Data Council session  link:https://www.youtube.com/watch?v=qlRCmH0XC5k[Streaming CDC data from PostgreSQL to Snowflake, challenges and solutions] , Alexandru Cristu presents a solution to this problem based on Debezium and Apache Flink.
 
 
-=== Data Ecosystem
+== Data Ecosystem
 * The  link:https://www.highgo.ca/blog/[High Go blog]  is a great place for learning more about everyone’s favourite RDBMS, aka Postgres.  link:https://www.highgo.ca/2024/01/26/a-comprehensive-overview-of-postgresql-query-processing-stages/[This post]  by Cary Huang is no exception, providing a nice overview of the stages a query goes through when being executed.
 * The Kafka community is bidding farewell to ZooKeeper, not only reducing the operational complexity of running Kafka clusters but also allowing for way more partitions on individual nodes than before. In his latest post, Paolo Patierno of the Strimzi team describes the differences between using Kafka with ZooKeeper and without (“KRaft mode”) and how to  link:https://strimzi.io/blog/2024/03/21/kraft-migration/[migrate existing clusters to the new mode] .
 * When running a Kafka (or as in this case, Redpanda) cluster in a single region isn’t enough to address your availability requirements, a multi-region set-up is the way to go. In  link:https://www.infoq.com/presentations/redpanda-raft/[this talk from QCon London] , Michał Maślanka discusses the fundamentals of multi-region clusters and dives into details such as leader election, reads from follower replicas, and tiered storage.
@@ -51,16 +51,16 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * DuckDB is an in-process analytics database, which has seen tremendous interest over the last few years. Initially solely an in-memory engine, it supports spilling over to disk when processing queries against large datasets since version 0.9. If you are curious about how this works under the hood, I highly recommend to check out this post about  link:https://duckdb.org/2024/03/29/external-aggregation.html[external aggregation in DuckDB] , by Laurens Kuiper.
 
 
-=== FLIP Foyer
+== FLIP Foyer
 * link:https://cwiki.apache.org/confluence/display/FLINK/FLIP-435%3A+Introduce+a+New+Materialized+Table+for+Simplifying+Data+Pipelines[FLIP-435: Introduce a New Materialized Table for Simplifying Data Pipelines] , proposing to introduce “a new table type [...], called Materialized Table, to simplify streaming and batch ETL pipeline cost-effectively”.
 * link:https://cwiki.apache.org/confluence/pages/viewpage.action?pageId=293046855[FLIP-423: Disaggregated State Storage and Management (Umbrella FLIP)] , proposing to support remote (object) storage for state management purposes in Flink
 
 
-=== Paper of the Month
+== Paper of the Month
 * link:https://arxiv.org/pdf/2403.13629v1.pdf[CheckMate: Evaluating Checkpointing Protocols for Streaming Dataflows]
 
 
-=== Events & Call for Papers (CfP)
+== Events & Call for Papers (CfP)
 * link:https://www.kafka-summit.org/events/kafka-summit-bangalore-2024/about[Kafka Summit Bengaluru]  (Bengaluru, India) *May 2* (CfP closed)
 * link:https://strimzi.io/blog/2024/04/09/strimzicon2024-schedule/[StrimziCon]  (virtual event) *May 22* (CfP closed)
 * link:https://program.berlinbuzzwords.de/bbuzz24/cfp[Berlin Buzzwords]  (Berlin, Germany) *June 9-11* (CfP closed)
@@ -68,7 +68,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * link:https://www.flink-forward.org/berlin-2024[Flink Forward]  (Berlin, Germany) *October 23-24* ( link:https://sessionize.com/flink-forward-2024-berlin[CfP]  closes on May 17)
 
 
-=== New Releases
+== New Releases
 A few new releases this month:
 
 * link:https://flink.apache.org/2024/03/21/apache-flink-kubernetes-operator-1.8.0-release-announcement/[Apache Flink Kubernetes Operator 1.8.0]
