--- a/content/blog/decodable-vs-amazon-msf-running-your-first-apache-flink-job.adoc
+++ b/content/blog/decodable-vs-amazon-msf-running-your-first-apache-flink-job.adoc
@@ -25,7 +25,7 @@ I’ll discuss this question from the perspective of someone looking to deploy a
 Let’s take a look at MSF first, followed by Decodable, which supports deploying Flink jobs as  link:https://docs.decodable.co/pipelines/create-pipelines-using-your-own-apache-flink-jobs.html[Custom Pipelines] .
 
 
-=== Deploying an Apache Flink Job on MSF
+== Deploying an Apache Flink Job on MSF
 The Flink offering on AWS comes in two different flavors: you can choose between deploying “Streaming applications” (to “analyze streaming data with data analytics applications”) and “Studio notebooks” (to “interactively query data streams in real time”).
 
 It’s not quite clear from the outset which option to choose when being new to the service, but there is a  link:https://docs.aws.amazon.com/managed-flink/latest/java/what-is.html[documentation page]  which helps you to make a decision depending on your specific use case.
@@ -49,7 +49,7 @@ Alternatively, the standard Flink web dashboard can also be accessed for gaining
 
 image::/images/2024/06/6717dc3782a396e17c57aa18_6702b0d47775ae30353ad51c_66799c9a27b386f94194b70b_AD_4nXfEhs67ALPV1jUq5vguahFUwk41Y_AQZMuXOHe3vnecMRzKlwKWEE2YcU3MUhIfOri3hx9ZqUEWisCmiQftnch9jDcixWYwA8w6jk0kpnugUF1T8n7WpfRV6IUvC7x-3IykN1I0Pj3TcU55GD8xyr8B9Kh0.webp[]
 _Fig.2: Configuring streaming application in Amazon MSF after setting it up_
-==== Deploying a PyFlink Job on MSF
+=== Deploying a PyFlink Job on MSF
 If you’d like to deploy a Python-based job (using the  link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/python/overview/[PyFlink]  API), the  link:https://docs.aws.amazon.com/managed-flink/latest/java/how-python-creating.html[required steps]  are slightly more involved.
 After uploading the job as a ZIP file (instead of a JAR file as for Java-based jobs), you’ll need to specify the name of your job’s Python script.
 To do so, go to “Runtime properties” and create a new entry with the group id `kinesis.analytics.flink.run.options` and the key `python` (the “kinesis.analytics” part being a reference to the  link:https://aws.amazon.com/blogs/aws/announcing-amazon-managed-service-for-apache-flink-renamed-from-amazon-kinesis-data-analytics/[original name]  of AWS’ Flink offering, “Amazon Kinesis Data Analytics”).
@@ -63,7 +63,7 @@ So those are the minimum steps necessary to get an existing Flink job running in
 Next, let’s take a look at how to get started with running an existing Flink job on Decodable.
 
 
-=== Deploying an Apache Flink Job on Decodable
+== Deploying an Apache Flink Job on Decodable
 In Decodable,  link:https://docs.decodable.co/pipelines/create-pipelines-using-your-own-apache-flink-jobs.html[Custom Pipelines]  enable you to run your own Flink jobs.
 To create a new pipeline using the web interface (you can use the CLI or API too), switch to the “Pipelines” tab, then select “New Pipeline” → “Upload Flink Job”.
 In the wizard which opens up, you can specify a Flink version and directly upload the job file.
@@ -74,7 +74,7 @@ You can now launch the job, and once it’s up and running, access metrics and l
 
 image::/images/2024/06/6717dc3782a396e17c57a9fd_6702b0d47775ae30353ad50e_66799c9a3abfe46674965b2a_AD_4nXdQpSaChOCo3eMnhR9e-VgdaTAPLJvDgsOYe3eSMBUJ2y4VGE1cJDCqMhVICqns4kNDUhqJHw3WehA2WdO6JPhUOu3AD3-ZRG2tQDgj7-ibcdOQuNmviAvq7B3Ypf1XozszHBL0uSmMjeWOD9worbwtdBA.webp[]
 _Fig.3: Uploading a Flink job JAR as a Custom Pipeline to Decodable_
-==== Deploying a PyFlink Job on Decodable
+=== Deploying a PyFlink Job on Decodable
 If you want to implement your stream processing job in Python rather than Java, the experience on Decodable is exactly the same; the only difference being that instead of a JAR file you are going to upload a ZIP file which contains your Python-based job as well as any 3rd party dependencies (Java or Python libraries) you may require.
 In comparison to MSF, Decodable is somewhat more opinionated here, for instance the main script is assumed to be named `main.py` and dependencies are to be  link:https://docs.decodable.co/pipelines/create-pipelines-using-your-own-apache-flink-jobs.html#_create_a_custom_pipeline_python[provided in a directory]  `python-libs`, without requiring any further configuration when deploying the job.
 
@@ -83,7 +83,7 @@ You don’t have to first upload your job file to S3 and then reference it from 
 Then again, of course, my perception may be biased—Decodable is the platform I am helping to build and thus am more familiar with.
 
 
-=== Connectors, SQL, and Beyond
+== Connectors, SQL, and Beyond
 Taking a step back, the fundamental difference between the two services lies in their underlying design philosophy, and to which extent users typically make direct use of the Flink APis to begin with.
 As such, the two platforms actually are hard to compare, as they are positioned at very different abstraction levels.
 With MSF–apart from its notebook-based experience which primarily is geared towards interactive and exploratory use cases–what you get is essentially a provisioned Flink cluster onto which you can deploy your hand-written Flink jobs, whereas Decodable provides a complete platform for stream processing as a service, depicted below:
@@ -120,7 +120,7 @@ When accessing external systems, you can integrate the required credentials into
 Instead, you can manage and access them in an easy-to-use and secure way.
 
 
-=== Which Option to Use?
+== Which Option to Use?
 Both Amazon MSF and Decodable are popular choices for running stream processing applications based on Apache Flink.
 While there are similarities in terms of general feature set and getting-started experience, the two offerings are positioned in fundamentally different ways.
 Decodable’s primary focus is on providing a fully managed experience for connectors and SQL-based processing jobs, while also allowing you to deploy existing Flink jobs if and when it’s needed.
